DROP2:
-Add stdout reporting mode (switch -m)
-Update ethercodes from nmap-3.81

DROP1:
-Remove all unnecessary (void) casts when retcode was not used
-Update ethercodes.dat to the ones from nmap
-indent the code
-Remove register hints for variables (nothing really considered)
-Remove {scss,rcs}id 


-- FORKED Mon Feb  7 13:31:36 CET 2005

@(#) $Id: CHANGES,v 1.41 2004/01/22 22:25:43 leres Exp $ (LBL)

v2.1 Thu Jan 22 14:05:27 PST 2004

- Add FDDI support. Based on code contributed by Flemming Johansen
  (fsj@csd.cri.dk)

- New -f flag overrides the default database filename.

- New -r flag allows tcpdump save files to be read.

- memcpy() doesn't handle overlapping buffers so use bcopy() instead.
  Reported by Attila Bruncsak (attila.bruncsak@itu.int)

- Have configure determine the sendmail path.

- Don't bother updating hostnames when reading arp.dat since this can
  be expensive in the number of dns requests generated.

- Improve robostness of the aprfetch script.

- Update massagevendor to convert the IEEE public Organizationally
  Unique Identifier (OUI) file format.

- Don't use -e with awk, not all versions support it. Suggested by
  Stephen Thompson (thompson@pobox.upenn.edu)

- Convert usage of mktemp() to mkstemp().

- Add -n flag (alternate networks) and -N flag (don't report bogons).

- Improve ethernet address parser error checking.

- More concessions to linux.

- Special case dn_skipname() check for bind 8.

- Convert arp2ethers from csh to sh.

v2.0.2 Sat Jun  7 03:15:03 PDT 1997

- Look for "_res" in -lresolv since Solaris doesn't have it in libc.
  Problem first reported by Blair Zajac (blair@gps.caltech.edu)

v2.0.1 Wed Jan  1 20:43:12 PST 1997

- Rework signal setup to accommodate Linux.

- Autoconf -lstr for DLPI under HPUX.

v2.0 Sat Oct  5 22:14:05 PDT 1996

- Add arpsnmp.

- Updated ethercodes.dat from http://www.cavebear.com/CaveBear/Ethernet/

- Ethernet vendor codes table now dynamic.

- Linux support added.
