@@ -102,7 +102,8 @@ does not fork.
 .B -m
 selects the output mode (report mode). Currently, 0 means the old mode
 (via sendmail), 1 is a simple stdout mode and arpwatch will not fork
-into the background.
+into the background. 2 means raw mode, where the fields are separated.
+by a ",". Default is 0.
 .LP
 Note that an empty
 .I arp.dat
